Source/JavaScriptCore/Target.pri
@@ -164,6 +164,7 @@ SOURCES += \
     runtime/JSArray.cpp \
     runtime/JSByteArray.cpp \
     runtime/JSCell.cpp \
+    runtime/JSDateMath.cpp \
     runtime/JSFunction.cpp \
     runtime/JSBoundFunction.cpp \
     runtime/JSGlobalData.cpp \
